apps/demo-app/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  namespace: dev-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: demo-dev.testargo.gravitee.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app-service
                port:
                  number: 80
  tls:
    - hosts:
        - demo-dev.testargo.gravitee.dev
      secretName: demo-app-dev-tls
